--- a/css/footer.css
+++ b/css/footer.css
@@ -1,141 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-}
-
-.header {
-  padding: 80px;
-  text-align: center;
-  background: #F5F5DC;
-  color: black;
-}
-
-.header h1 {
-  font-size: 40px;
-}
-
-.navbarnoboottrap {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.navbarnoboottrap a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-}
-
-.navbarnoboottrap a.right {
-  float: right;
-}
-
-.navbarnoboottrap a:hover {
-  background-color: #ddd;
-}
-
-.row {  
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.side {
-  flex: 30%;
-  background-color: #f1f1f1;
-  padding: 20px;
-}
-
-.main {   
-  flex: 70%;
-  background-color: white;
-  padding: 20px;
-}
-
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-footer {
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
-  color: white;
-  display: block;
-  padding: 5px;
-}
-}
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.dropdownnoboottrap {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdownnoboottrap .dropbtnnoboottrap {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbarnoboottrap a:hover, .dropdownnoboottrap:hover .dropbtnnoboottrap {
-  background-color: black;
-}
-
-.dropdown-contentnoboottrap {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-contentnoboottrap a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-contentnoboottrap a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.dropdownnoboottrap:hover .dropdown-contentnoboottrap {
-  display: block;
-}
-
-@media screen and (max-width: 700px) {
-  .row {   
-    flex-direction: column;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .navbar a {
-    float: none;
-    width:100%;
-  }
-}
-
 .site-footer
 {
   background-color:#26272b;
@@ -303,3 +165,108 @@ body {
   }
 }
 
+
+/* Layout na menubar
+-------------------------------------------------------------- */
+img,video{width: auto; max-width: 100%; height: auto; margin: 0 auto 1em;}
+.container{width:88%;margin-left:auto;margin-right:auto;max-width:1400px;*zoom:1;}
+.grid-container:after{content:"";display:table;clear:both;}
+.grid-unit {position: relative;margin-left: 0;width: 100%;float: left;display: inline; margin-bottom: 2em;}
+.grid:after {content: "";display: table;clear: both;}
+*, *:after, *:before {-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;}
+
+body{
+  font-size: 100%;
+  line-height: 1.5;
+  background-color: #f6f2eb;
+  color: #524d46;
+}
+
+h1{
+  font-size: 2.000em;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0.125em;
+  margin: 0.469em 0 0.469em;
+}
+
+p{
+  margin-bottom: 1.250em;
+}
+
+.site-header, .site-footer{
+  float: left;
+  width: 100%;
+}
+
+.banner-image{
+  margin-bottom: 1.563em;
+}
+
+.site-footer .container{
+  border-top: 0.063em solid rgba(0, 0, 0, 0.1);
+  border-bottom: 0.063em solid rgba(0, 0, 0, 0.1);
+  padding: 2.500em 0 1.250em;
+  text-align: center;
+}
+
+.buttonfirstpart {
+-webkit-border-radius: 10px;
+-moz-border-radius: 10px;
+border-radius: 10px;
+background: black;
+  position:relative; 
+  margin: -20px -50px; 
+  width:100px; top:50%;
+   left:50%;
+   text-align: center;
+
+}
+
+.grid-unit:hover{
+    outline: 1px solid blue;
+  }
+
+
+/* Links & Navigation
+-------------------------------------------------------------- */
+
+@media screen and (min-width: 700px) {
+  body{
+    font-size: 112.5%;
+  }
+  
+  .col-3 .grid-unit {
+    width: 30%;
+  }
+
+  .grid-unit{
+    margin-right: 5%;
+  }
+  
+  .col-3 .grid-unit:last-child{
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  body{
+    font-size: 137.5%;
+  }
+}
+  
+@media screen and (min-width: 1100px) {
+  body{
+    font-size: 150%;
+  }
+}
+
+
+.centered-text {
+  text-align: center;
+}
+.centered-googleform {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
