fix voor alle links
fix voor alle paginas voor linken van menubar en footer. links die niet werken zijn gefixed

--- a/includes/menubar.html
+++ b/includes/menubar.html
@@ -16,15 +16,15 @@
 
 <div class="navbarnoboottrap">
 
-  <a href="index.html">Home</a>
+  <a href="https://scriptsupporter.com/index.html">Home</a>
   <div class="dropdownnoboottrap">
     <button class="dropbtnnoboottrap">Google App Script 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-contentnoboottrap">
-      <a href="GoogleAppScript/sheets.html">Sheets</a>
-      <a href="GoogleAppScript/docs.html">Docs</a>
-      <a href="GoogleAppScript/overGoogleAppScript.html">Over</a>
+      <a href="https://scriptsupporter.com/GoogleAppScript/sheets.html">Sheets</a>
+      <a href="https://scriptsupporter.com/GoogleAppScript/docs.html">Docs</a>
+      <a href="https://scriptsupporter.com/GoogleAppScript/overGoogleAppScript.html">Over</a>
     </div>
 </div>
   <div class="dropdownnoboottrap">
@@ -32,8 +32,8 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-contentnoboottrap">
-      <a href="Onderwijs/digitaliseren.html">Digitaliseren</a>
-      <a href="Onderwijs/watwijkunnen.html">Wat wij kunnen doen</a>
+      <a href="https://scriptsupporter.com/Onderwijs/digitaliseren.html">Digitaliseren</a>
+      <a href="https://scriptsupporter.com/Onderwijs/watwijkunnen.html">Wat wij kunnen doen</a>
     </div>
 </div>
   <div class="dropdownnoboottrap">
@@ -41,9 +41,9 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-contentnoboottrap">
-      <a href="Overstappen/g-suite.html">G-suite</a>
-      <a href="Overstappen/digitaliseren.html">Digitaliseren</a>
-      <a href="Overstappen/systemenaanelkaarkoppelen.html">Systemen aan elkaar koppelen</a>
+      <a href="https://scriptsupporter.com/Overstappen/g-suite.html">G-suite</a>
+      <a href="https://scriptsupporter.com/Overstappen/digitaliseren.html">Digitaliseren</a>
+      <a href="https://scriptsupporter.com/Overstappen/systemenaanelkaarkoppelen.html">Systemen aan elkaar koppelen</a>
     </div>
 </div>
   <div class="right">
@@ -52,8 +52,8 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-contentnoboottrapright">
-      <a href="contact/contact.html">Neem contact op</a>
-      <a href="contact/overons.html">Over ons</a>
+      <a href="https://scriptsupporter.com/contact/contact.html">Neem contact op</a>
+      <a href="https://scriptsupporter.com/contact/overons.html">Over ons</a>
     </div>
 </div>
 </div>
