--- a/includes/footer.html
+++ b/includes/footer.html
@@ -31,7 +31,14 @@
               <li><a href="#">Overstappen</a></li>
             </ul>
           </div>
-
+      <div class="col-xs-6 col-md-3">
+            <h6>Onze Gegevens</h6>
+            <ul class="footer-links">
+              <li><a href="#">KVK nummer: </a></li>
+              <li><a href="mailto:info@scriptsupporter.com">Email: Info@Scriptsupporter.com</a></li>
+              <li><a href="#">Telefoon: ...</a></li>
+            </ul>
+          </div>
           <div class="col-xs-6 col-md-3">
             <h6>Quick Links</h6>
             <ul class="footer-links">
@@ -42,11 +49,12 @@
         </div>
         <hr>
       </div>
+
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
             <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by 
-         <a href="#">Scriptsupporter</a>.
+         <a href="https://scriptsupporter.com/">Scriptsupporter</a>.
             </p>
           </div>
 
