--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,10 @@ body {
   }
 }
 
+@media only screen and (max-width: 767px) {
+h1 { font-size: 22px !important; }
+}
+
 .site-footer
 {
   background-color:#26272b;
