--- a/css/main.css
+++ b/css/main.css
@@ -182,9 +182,12 @@ body {
   }
 }
 
-@media only screen and (max-width: 767px) {
-h1 { font-size: 22px !important; }
-}
+@media screen and (max-width: 360px) {
+  h1 {
+    font-size: 12px !important;
+    line-height: 80%;
+    margin-top: 10px;
+  }
 
 .site-footer
 {
