--- a/css/main.css
+++ b/css/main.css
@@ -183,7 +183,7 @@ body {
 }
 
 @media screen and (max-width: 360px) {
-  h1 {
+  .header {
     font-size: 12px !important;
     line-height: 80%;
     margin-top: 10px;
