--- a/css/main.css
+++ b/css/main.css
@@ -188,6 +188,12 @@ body {
     line-height: 80%;
     margin-top: 10px;
   }
+  .header h1{
+    font-size: 12px !important;
+    line-height: 80%;
+    margin-top: 10px;
+    text-align: center;
+  }
 
 .site-footer
 {
