engelse versie van de site

--- a/en/includes/menubar.html
+++ b/en/includes/menubar.html
@@ -24,26 +24,26 @@
     <div class="dropdown-contentnoboottrap">
       <a href="https://scriptsupporter.com/GoogleAppScript/sheets.html">Sheets</a>
       <a href="https://scriptsupporter.com/GoogleAppScript/docs.html">Docs</a>
-      <a href="https://scriptsupporter.com/GoogleAppScript/overGoogleAppScript.html">Over</a>
+      <a href="https://scriptsupporter.com/GoogleAppScript/overGoogleAppScript.html">About</a>
     </div>
 </div>
   <div class="dropdownnoboottrap">
-    <button class="dropbtnnoboottrap">Onderwijs
+    <button class="dropbtnnoboottrap">Education
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-contentnoboottrap">
-      <a href="https://scriptsupporter.com/Onderwijs/digitaliseren.html">Digitaliseren</a>
-      <a href="https://scriptsupporter.com/Onderwijs/watwijkunnen.html">Wat wij kunnen doen</a>
+      <a href="https://scriptsupporter.com/Onderwijs/digitaliseren.html">digitize</a>
+      <a href="https://scriptsupporter.com/Onderwijs/watwijkunnen.html">What we can do</a>
     </div>
 </div>
   <div class="dropdownnoboottrap">
-    <button class="dropbtnnoboottrap">Overstappen
+    <button class="dropbtnnoboottrap">Transfer
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-contentnoboottrap">
       <a href="https://scriptsupporter.com/Overstappen/g-suite.html">G-suite</a>
-      <a href="https://scriptsupporter.com/Overstappen/digitaliseren.html">Digitaliseren</a>
-      <a href="https://scriptsupporter.com/Overstappen/systemenaanelkaarkoppelen.html">Systemen aan elkaar koppelen</a>
+      <a href="https://scriptsupporter.com/Overstappen/digitaliseren.html">digitize</a>
+      <a href="https://scriptsupporter.com/Overstappen/systemenaanelkaarkoppelen.html">Linking systems together</a>
     </div>
 </div>
   <div class="right">
@@ -52,14 +52,14 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-contentnoboottrapright">
-      <a href="https://scriptsupporter.com/contact/contact.html">Neem contact op</a>
-      <a href="https://scriptsupporter.com/contact/overons.html">Over ons</a>
+      <a href="https://scriptsupporter.com/contact/contact.html">contact us</a>
+      <a href="https://scriptsupporter.com/contact/overons.html">About us</a>
     </div>
 </div>
 </div>
   <div class="right">
   <div class="dropdownnoboottrapright">
-    <img href="Scriptsupporter.com/en/index.html" src="https://scriptsupporter.com/images/swithlanguageEN.png"/>
+    <img href="Scriptsupporter.com/en/index.html" src="https://scriptsupporter.com/images/swithlanguageNL.png"/>
 </div>
 </div>
 
