--- a/en/includes/menubar.html
+++ b/en/includes/menubar.html
@@ -16,15 +16,15 @@
 
 <div class="navbarnoboottrap">
 
-  <a href="https://scriptsupporter.com/index.html">Home</a>
+  <a href="https://scriptsupporter.com/en/index.html">Home</a>
   <div class="dropdownnoboottrap">
     <button class="dropbtnnoboottrap">Google App Script 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-contentnoboottrap">
-      <a href="https://scriptsupporter.com/GoogleAppScript/sheets.html">Sheets</a>
-      <a href="https://scriptsupporter.com/GoogleAppScript/docs.html">Docs</a>
-      <a href="https://scriptsupporter.com/GoogleAppScript/overGoogleAppScript.html">About</a>
+      <a href="https://scriptsupporter.com/en/GoogleAppScript/sheets.html">Sheets</a>
+      <a href="https://scriptsupporter.com/en/GoogleAppScript/docs.html">Docs</a>
+      <a href="https://scriptsupporter.com/en/GoogleAppScript/aboutGoogleAppScript.html">About</a>
     </div>
 </div>
   <div class="dropdownnoboottrap">
@@ -32,8 +32,8 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-contentnoboottrap">
-      <a href="https://scriptsupporter.com/Onderwijs/digitaliseren.html">digitize</a>
-      <a href="https://scriptsupporter.com/Onderwijs/watwijkunnen.html">What we can do</a>
+      <a href="https://scriptsupporter.com/en/education/digitize.html">digitize</a>
+      <a href="https://scriptsupporter.com/en/education/whatwecando.html">What we can do</a>
     </div>
 </div>
   <div class="dropdownnoboottrap">
@@ -41,9 +41,9 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-contentnoboottrap">
-      <a href="https://scriptsupporter.com/Overstappen/g-suite.html">G-suite</a>
-      <a href="https://scriptsupporter.com/Overstappen/digitaliseren.html">digitize</a>
-      <a href="https://scriptsupporter.com/Overstappen/systemenaanelkaarkoppelen.html">Linking systems together</a>
+      <a href="https://scriptsupporter.com/en/transfer/g-suite.html">G-suite</a>
+      <a href="https://scriptsupporter.com/en/transfer/digitize.html">digitize</a>
+      <a href="https://scriptsupporter.com/en/transfer/linkingsystemstogether.html">Linking systems together</a>
     </div>
 </div>
   <div class="right">
@@ -52,8 +52,8 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-contentnoboottrapright">
-      <a href="https://scriptsupporter.com/contact/contact.html">contact us</a>
-      <a href="https://scriptsupporter.com/contact/overons.html">About us</a>
+      <a href="https://scriptsupporter.com/en/contact/contact.html">contact us</a>
+      <a href="https://scriptsupporter.com/en/contact/aboutus.html">About us</a>
     </div>
 </div>
 </div>
