--- a/en/includes/menubar.html
+++ b/en/includes/menubar.html
@@ -59,7 +59,7 @@
 </div>
   <div class="right">
   <div class="dropdownnoboottrapright">
-    <img href="Scriptsupporter.com/en/index.html" src="https://scriptsupporter.com/images/swithlanguageNL.png"/>
+    <img onclick="window.location.href = 'https://scriptsupporter.com/index.html';" src="https://scriptsupporter.com/images/swithlanguageNL.png"/>
 </div>
 </div>
 
