--- a/includes/menubar.html
+++ b/includes/menubar.html
@@ -62,7 +62,7 @@
     <img onclick="window.location.href = 'https://scriptsupporter.com/en/index.html';" src="https://scriptsupporter.com/images/swithlanguageEN.png"/>
 </div>
 </div>
-
+<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 
 </div>
 
