--- a/css/menubar.css
+++ b/css/menubar.css
@@ -168,6 +168,9 @@ body {
 .dropdownnoboottrapright:hover .dropdown-contentnoboottrapright {
   display: block;
 }
+.icon {
+  display: none;
+}
 
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child), .dropdown .dropbtn {
@@ -180,20 +183,20 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
+  .navbarnoboottrap.responsive {position: relative;}
+  .navbarnoboottrap.responsive .icon {
     position: absolute;
     right: 0;
     top: 0;
   }
-  .topnav.responsive a {
+  .navbarnoboottrap.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
-  .topnav.responsive .dropdown {float: none;}
-  .topnav.responsive .dropdown-content {position: relative;}
-  .topnav.responsive .dropdown .dropbtn {
+  .navbarnoboottrap.responsive .dropdownnoboottrap {float: none;}
+  .navbarnoboottrap.responsive .dropdown-contentnoboottrap {position: relative;}
+  .navbarnoboottrap.responsive .dropdownnoboottrap .dropbtnnoboottrap {
     display: block;
     width: 100%;
     text-align: left;
