--- a/css/menubar.css
+++ b/css/menubar.css
@@ -1,102 +1,35 @@
-* {
-  box-sizing: border-box;
-}
+body {margin:0;font-family:Arial}
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-}
-
-.header {
-  padding: 80px;
-  text-align: center;
-  background: #F5F5DC;
-  color: black;
-}
-
-.header h1 {
-  font-size: 40px;
-}
-
-.navbarnoboottrap {
+.topnav {
   overflow: hidden;
   background-color: #333;
 }
 
-.navbarnoboottrap a {
+.topnav a {
   float: left;
   display: block;
-  color: white;
+  color: #f2f2f2;
   text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-}
-
-.navbarnoboottrap a.right {
-  float: right;
-}
-
-.navbarnoboottrap a:hover {
-  background-color: #ddd;
-}
-
-.row {  
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.side {
-  flex: 30%;
-  background-color: #f1f1f1;
-  padding: 20px;
-}
-
-.main {   
-  flex: 70%;
-  background-color: white;
-  padding: 20px;
-}
-
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-footer {
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
-  color: white;
-  display: block;
-  padding: 5px;
-}
-}
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.dropdownnoboottrap {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdownnoboottrapright {
-  float: right;
-  overflow: hidden;
-}
-.dropdownnoboottrapright .dropbtnnoboottrap {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
   padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
+  text-decoration: none;
+  font-size: 17px;
 }
-.dropdownnoboottrap .dropbtnnoboottrap {
-  font-size: 16px;  
+
+.active {
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 17px;    
   border: none;
   outline: none;
   color: white;
@@ -106,15 +39,7 @@ body {
   margin: 0;
 }
 
-.navbarnoboottrap a:hover, .dropdownnoboottrap:hover .dropbtnnoboottrap {
-  background-color: black;
-}
-
-.navbarnoboottrapright a:hover, .dropdownnoboottrapright:hover .dropbtnnoboottrap {
-  background-color: black;
-}
-
-.dropdown-contentnoboottrap {
+.dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -122,26 +47,8 @@ body {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
-.dropdown-contentnoboottrapright {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  right: 4px;
-  left: auto;
-}
 
-.dropdown-contentnoboottrapright a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-.dropdown-contentnoboottrap a {
+.dropdown-content a {
   float: none;
   color: black;
   padding: 12px 16px;
@@ -150,26 +57,18 @@ body {
   text-align: left;
 }
 
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
 
-.dropdown-contentnoboottrap a:hover {
+.dropdown-content a:hover {
   background-color: #ddd;
   color: black;
 }
 
-.dropdown-contentnoboottrapright a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.dropdownnoboottrap:hover .dropdown-contentnoboottrap {
+.dropdown:hover .dropdown-content {
   display: block;
-}
-
-.dropdownnoboottrapright:hover .dropdown-contentnoboottrapright {
-  display: block;
-}
-.icon {
-  display: none;
 }
 
 @media screen and (max-width: 600px) {
@@ -180,25 +79,31 @@ body {
     float: right;
     display: block;
   }
+  .imglanguage{
+   display: none;
+  }
 }
 
 @media screen and (max-width: 600px) {
-  .navbarnoboottrap.responsive {position: relative;}
-  .navbarnoboottrap.responsive .icon {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
     position: absolute;
     right: 0;
     top: 0;
   }
-  .navbarnoboottrap.responsive a {
+  .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
-  .navbarnoboottrap.responsive .dropdownnoboottrap {float: none;}
-  .navbarnoboottrap.responsive .dropdown-contentnoboottrap {position: relative;}
-  .navbarnoboottrap.responsive .dropdownnoboottrap .dropbtnnoboottrap {
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
     display: block;
     width: 100%;
     text-align: left;
+  }
+    .imglanguage{
+    display: none;
   }
 }
