--- a/includes/menubar.html
+++ b/includes/menubar.html
@@ -6,7 +6,7 @@
 <title>ScriptSupporter</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="menubar.css">
+<link rel="stylesheet" href="https://scriptsupporter.com/css/menubar.css">
 </head>
 <body>
 
