update css en js voor menubar

--- a/includes/menubar.html
+++ b/includes/menubar.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://scriptsupporter.com/css/font-awesome.min.css">
 <head>
 <title>ScriptSupporter</title>
 <meta charset="UTF-8">
