--- a/en/includes/menubar.html
+++ b/en/includes/menubar.html
@@ -73,7 +73,7 @@ function myFunction() {
 </div>
   <div class="right">
   <div class="dropdown">
-    <img class="active" onclick="window.location.href = 'https://scriptsupporter.com/en/index.html';" src="https://scriptsupporter.com/images/swithlanguageEN.png"/>
+    <img class="active" onclick="window.location.href = 'https://scriptsupporter.com/index.html';" src="https://scriptsupporter.com/images/swithlanguageNL.png"/>
 </div>
 </div>
 <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
